<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/add_group_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_group"/>

    <TextView
    android:id="@+id/name_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/name" />

    <EditText
        android:id="@+id/group_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name_placeholder" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/group_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_description_placeholder" />

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>